# occlusion-culling-visualization

./: .appveyor.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
data/: city.tmx
patches/: occ.diff  vl.diff
src/: CMakeLists.txt  VlGlfwOcv.hpp  VlWin32Ocv.hpp  VlWinConsoleOcv.cpp  VlWinWin32Ocv.cpp
src/camera/: CMakeLists.txt
src/camera/include/camera/: CameraType.hpp  DoubleCamera.hpp
src/camera/src/: DoubleCamera.cpp  Observator.cpp  Observator.hpp  Player.cpp  Player.hpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: Menu.hpp
src/gui/src/: InformationMenu.cpp  InformationMenu.hpp  Menu.cpp
src/input/: CMakeLists.txt
src/input/include/input/: VlController.hpp
src/input/src/: ExitApplication.cpp  ExitApplication.hpp  ToggleActiveView.cpp  ToggleActiveView.hpp  ToggleEditorMode.cpp  ToggleEditorMode.hpp  ToggleMenu.cpp  ToggleMenu.hpp  ToggleObserverAABBDraw.cpp  ToggleObserverAABBDraw.hpp  ToggleOcvAlgorithm.cpp  ToggleOcvAlgorithm.hpp  TogglePlayerAABBDraw.cpp  TogglePlayerAABBDraw.hpp  ToggleSecondView.cpp  ToggleSecondView.hpp  ToggleView.cpp  ToggleView.hpp  ToggleVisualizationEffect.cpp  ToggleVisualizationEffect.hpp  ToggleWireMode.cpp  ToggleWireMode.hpp  VisualizationCommand.hpp  VlController.cpp  WholeApplicationVlController.cpp  WholeApplicationVlController.hpp
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: AABBRenderer.hpp  GuiRenderer.hpp  NotOccludedActors.hpp  ObservatorRenderer.hpp  PlayerRenderer.hpp
src/renderer/src/: AABBRenderer.cpp  GuiRenderer.cpp  ObservatorRenderer.cpp  PlayerRenderer.cpp
src/scene/: CMakeLists.txt
src/scene/include/scene/: City.hpp  GlobalIllumination.hpp
src/scene/src/: City.cpp  GlobalIllumination.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: BuildingLoader.hpp  DefaultUiEventListener.hpp  FileAccess.hpp  FpsCounter.hpp  MockFileAccess.hpp  OcclusionStatistics.hpp  VisualizationState.hpp
src/utils/include/utils/vl/: Log.hpp  MakeRef.hpp
src/utils/src/: BuildingLoader.cpp  FileAccess.cpp  FpsCounter.cpp  OcclusionStatistics.cpp  StandardFileAccess.cpp  StandardFileAccess.hpp  StandardFileAccess.ut.cpp  StandardFileAccess.ut.cpp1.txt  StandardFileAccess.ut.cpp2.txt  XmlBuildingLoader.cpp  XmlBuildingLoader.hpp  XmlBuildingLoader.ut.cpp
src/view/: CMakeLists.txt
src/view/include/view/: ViewType.hpp  VisualizationView.hpp
src/view/src/: VisualizationView.cpp
src/window/: CMakeLists.txt
src/window/include/window/: Window.hpp
src/window/src/: GlfwWindow.cpp  GlfwWindow.hpp  Win32Window.cpp  Win32Window.hpp  Window.cpp
